ALTER TABLE "movies"
ADD COLUMN IF NOT EXISTS "actors" TEXT[] NOT NULL DEFAULT ARRAY[]::TEXT[];
