// This is your Prisma schema file
// Learn more: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─────────────────────────────────────────────────────────────
// Enums
// ─────────────────────────────────────────────────────────────

enum UserRole {
  viewer
  admin
}

enum MovieStatus {
  draft
  published
}

enum EncodeStatus {
  pending
  processing
  ready
  failed
}

enum UploadFileType {
  video
  thumbnail
}

enum UploadStatus {
  uploading
  uploaded
  failed
}

enum SubscriptionStatus {
  active
  canceled
  expired
}

enum PaymentStatus {
  pending
  completed
  failed
  refunded
}

// ─────────────────────────────────────────────────────────────
// Models
// ─────────────────────────────────────────────────────────────

model User {
  id             String    @id @default(uuid()) @db.Uuid
  email          String    @unique @db.VarChar(255)
  passwordHash   String    @map("password_hash") @db.VarChar(255)
  displayName    String?   @map("display_name") @db.VarChar(100)
  avatarUrl      String?   @map("avatar_url") @db.VarChar(1000)
  role           UserRole  @default(viewer)
  isActive       Boolean   @default(true) @map("is_active")
  disabledAt     DateTime? @map("disabled_at") @db.Timestamptz
  disabledReason String?   @map("disabled_reason") @db.VarChar(500)
  createdAt      DateTime  @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime  @updatedAt @map("updated_at") @db.Timestamptz

  refreshTokens      RefreshToken[]
  passwordResetTokens PasswordResetToken[]
  favorites          Favorite[]
  ratings            Rating[]
  watchHistory       WatchHistory[]
  subscription       Subscription?
  payments           Payment[]
  monthlyUsage       MonthlyUsage[]

  @@map("users")
}

model PasswordResetToken {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  token     String   @unique @db.VarChar(512)
  expiresAt DateTime @map("expires_at") @db.Timestamptz
  used      Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("password_reset_tokens")
}

model RefreshToken {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  token     String   @unique @db.VarChar(512)
  expiresAt DateTime @map("expires_at") @db.Timestamptz
  revoked   Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("refresh_tokens")
}

model Movie {
  id              String       @id @default(uuid()) @db.Uuid
  title           String       @db.VarChar(500)
  description     String?      @db.Text
  posterUrl       String?      @map("poster_url") @db.VarChar(1000)
  backdropUrl     String?      @map("backdrop_url") @db.VarChar(1000)
  durationSeconds Int?         @map("duration_seconds")
  releaseYear     Int?         @map("release_year")
  movieStatus     MovieStatus  @default(draft) @map("movie_status")
  encodeStatus    EncodeStatus @default(pending) @map("encode_status")
  playbackUrl     String?      @map("playback_url") @db.VarChar(1000)
  originalKey     String?      @map("original_key") @db.VarChar(500)

  // TMDb extended fields
  tmdbId           Int?    @unique @map("tmdb_id")
  popularity       Float?  @default(0)
  voteAverage      Float?  @default(0) @map("vote_average")
  voteCount        Int?    @default(0) @map("vote_count")
  originalLanguage String? @map("original_language") @db.VarChar(10)
  trailerUrl       String? @map("trailer_url") @db.VarChar(500)

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz

  actors    String[]     @default([])

  genres       MovieGenre[]
  favorites    Favorite[]
  uploads      Upload[]
  ratings      Rating[]
  watchHistory WatchHistory[]

  @@index([movieStatus, encodeStatus], name: "idx_movies_status")
  @@index([createdAt(sort: Desc)], name: "idx_movies_created_at")
  @@index([releaseYear])
  @@index([title])
  @@map("movies")
}

model Genre {
  id   String @id @default(uuid()) @db.Uuid
  name String @unique @db.VarChar(100)
  slug String @unique @db.VarChar(100)

  movies MovieGenre[]

  @@map("genres")
}

model MovieGenre {
  movieId String @map("movie_id") @db.Uuid
  genreId String @map("genre_id") @db.Uuid

  movie Movie @relation(fields: [movieId], references: [id], onDelete: Cascade)
  genre Genre @relation(fields: [genreId], references: [id], onDelete: Cascade)

  @@id([movieId, genreId])
  @@index([genreId])
  @@map("movie_genres")
}

model Favorite {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  movieId   String   @map("movie_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  movie Movie @relation(fields: [movieId], references: [id], onDelete: Cascade)

  @@unique([userId, movieId])
  @@index([userId])
  @@map("favorites")
}

model Upload {
  id           String         @id @default(uuid()) @db.Uuid
  movieId      String         @map("movie_id") @db.Uuid
  objectKey    String         @unique @map("object_key") @db.VarChar(500)
  fileType     UploadFileType @map("file_type")
  uploadStatus UploadStatus   @default(uploading) @map("upload_status")
  sizeBytes    BigInt?        @map("size_bytes")
  createdAt    DateTime       @default(now()) @map("created_at") @db.Timestamptz

  movie Movie @relation(fields: [movieId], references: [id], onDelete: Cascade)

  @@index([movieId])
  @@map("uploads")
}

model Rating {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  movieId   String   @map("movie_id") @db.Uuid
  rating    Int      @db.SmallInt // 1-5 stars
  comment   String?  @db.Text // optional review text
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  movie Movie @relation(fields: [movieId], references: [id], onDelete: Cascade)

  @@unique([userId, movieId])
  @@index([movieId])
  @@map("ratings")
}

model WatchHistory {
  id              String   @id @default(uuid()) @db.Uuid
  userId          String   @map("user_id") @db.Uuid
  movieId         String   @map("movie_id") @db.Uuid
  progressSeconds Int      @default(0) @map("progress_seconds")
  durationSeconds Int      @default(0) @map("duration_seconds")
  completed       Boolean  @default(false)
  lastWatchedAt   DateTime @default(now()) @map("last_watched_at") @db.Timestamptz
  createdAt       DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt       DateTime @updatedAt @map("updated_at") @db.Timestamptz

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  movie Movie @relation(fields: [movieId], references: [id], onDelete: Cascade)

  @@unique([userId, movieId])
  @@index([userId, lastWatchedAt(sort: Desc)])
  @@map("watch_history")
}

// ─────────────────────────────────────────────────────────────
// Subscription Models
// ─────────────────────────────────────────────────────────────

model SubscriptionPlan {
  id                   String   @id @default(uuid()) @db.Uuid
  name                 String   @unique @db.VarChar(50)  // "free", "pro", "premium"
  displayName          String   @db.VarChar(100)          // "Free", "Pro", "Premium"
  description          String?  @db.VarChar(500)
  maxMoviesPerMonth    Int      @default(5)
  maxQualityResolution String   @default("480p") @db.VarChar(50)  // "480p", "1080p", "4K"
  maxFavorites         Int      @default(10)
  maxDevices           Int      @default(1)
  showAds              Boolean  @default(true)
  monthlyPrice         Float    @default(0)
  annualPrice          Float?
  isActive             Boolean  @default(true)
  createdAt            DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt            DateTime @updatedAt @map("updated_at") @db.Timestamptz

  subscriptions Subscription[]

  @@map("subscription_plans")
}

model Subscription {
  id           String               @id @default(uuid()) @db.Uuid
  userId       String   @unique     @map("user_id") @db.Uuid
  planId       String               @map("plan_id") @db.Uuid
  status       SubscriptionStatus   @default(active)
  startDate    DateTime             @default(now()) @map("start_date") @db.Timestamptz
  endDate      DateTime             @map("end_date") @db.Timestamptz
  autoRenew    Boolean              @default(true) @map("auto_renew")
  createdAt    DateTime             @default(now()) @map("created_at") @db.Timestamptz
  updatedAt    DateTime             @updatedAt @map("updated_at") @db.Timestamptz

  user  User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan  SubscriptionPlan   @relation(fields: [planId], references: [id])
  payments Payment[]

  @@index([userId])
  @@index([planId])
  @@index([status])
  @@map("subscriptions")
}

model Payment {
  id              String        @id @default(uuid()) @db.Uuid
  userId          String        @map("user_id") @db.Uuid
  subscriptionId  String        @map("subscription_id") @db.Uuid
  transactionId   String?       @unique @map("transaction_id") @db.VarChar(255)
  paymentMethod   String        @default("mock") @map("payment_method") @db.VarChar(50)
  planName        String?       @map("plan_name") @db.VarChar(50)
  billingCycle    String?       @map("billing_cycle") @db.VarChar(20)
  providerReference String?     @unique @map("provider_reference") @db.VarChar(255)
  providerTransactionId String? @map("provider_transaction_id") @db.VarChar(255)
  providerResponseCode String?  @map("provider_response_code") @db.VarChar(20)
  providerTransactionStatus String? @map("provider_transaction_status") @db.VarChar(20)
  providerPayload Json?         @map("provider_payload")
  amount          Float
  currency        String        @default("VND") @db.VarChar(10)
  status          PaymentStatus @default(pending)
  invoiceUrl      String?       @map("invoice_url") @db.VarChar(1000)
  createdAt       DateTime      @default(now()) @map("created_at") @db.Timestamptz
  updatedAt       DateTime      @updatedAt @map("updated_at") @db.Timestamptz

  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  subscription  Subscription  @relation(fields: [subscriptionId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([subscriptionId])
  @@index([status])
  @@index([providerTransactionId])
  @@map("payments")
}

model MonthlyUsage {
  id             String   @id @default(uuid()) @db.Uuid
  userId         String   @map("user_id") @db.Uuid
  year           Int
  month          Int      @db.SmallInt
  moviesWatched  Int      @default(0) @map("movies_watched")
  createdAt      DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime @updatedAt @map("updated_at") @db.Timestamptz

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, year, month])
  @@index([userId])
  @@map("monthly_usage")
}
